// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination should render correctly 1`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-13xrz53-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.cache-13xrz53-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-xa4fns-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-xa4fns-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-xa4fns-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-xa4fns-StyledOutlinedButton:hover,
.cache-xa4fns-StyledOutlinedButton:active {
  background: #e6daff;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-1t06wjh-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #464959;
}

.cache-1t06wjh-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t06wjh-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1t06wjh-StyledOutlinedButton:hover,
.cache-1t06wjh-StyledOutlinedButton:active {
  background: #d9dadd;
  color: #222638;
  border: 1px solid #92959d;
}

.cache-1h6gv7y-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-1h6gv7y-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1h6gv7y-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1h6gv7y-StyledOutlinedButton:hover,
.cache-1h6gv7y-StyledOutlinedButton:active {
  background: #e6daff;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

<div
    class="cache-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="cache-13xrz53-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M7.29289 9.2823C6.90237 8.89178 6.90237 8.25861 7.29289 7.86809L11.2929 3.86809C11.6834 3.47756 12.3166 3.47756 12.7071 3.86809C13.0976 4.25861 13.0976 4.89178 12.7071 5.2823L9.41421 8.5752L12.7071 11.8681C13.0976 12.2586 13.0976 12.8918 12.7071 13.2823C12.3166 13.6728 11.6834 13.6728 11.2929 13.2823L7.29289 9.2823Z"
          />
          <path
            d="M1.29289 9.2823C0.902369 8.89178 0.902369 8.25861 1.29289 7.86809L5.29289 3.86809C5.68342 3.47756 6.31658 3.47756 6.70711 3.86809C7.09763 4.25861 7.09763 4.89178 6.70711 5.2823L3.41421 8.5752L6.70711 11.8681C7.09763 12.2586 7.09763 12.8918 6.70711 13.2823C6.31658 13.6728 5.68342 13.6728 5.29289 13.2823L1.29289 9.2823Z"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="cache-13xrz53-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.3 8.7a1 1 0 0 1 0-1.4l4-4a1 1 0 1 1 1.4 1.4L7.42 8l3.3 3.3a1 1 0 0 1-1.42 1.4l-4-4Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="true"
        aria-label="Page 1"
        class="cache-xa4fns-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          1
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 2"
        class="cache-1t06wjh-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          2
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 3"
        class="cache-1t06wjh-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          3
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 4"
        class="cache-1t06wjh-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          4
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 5"
        class="cache-1t06wjh-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          5
        </div>
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="cache-1h6gv7y-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M10.7071 7.29289C11.0976 7.68342 11.0976 8.31658 10.7071 8.70711L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L8.58579 8L5.29289 4.70711C4.90237 4.31658 4.90237 3.68342 5.29289 3.29289C5.68342 2.90237 6.31658 2.90237 6.70711 3.29289L10.7071 7.29289Z"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="cache-1h6gv7y-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M7.70711 7.86809C8.09763 8.25861 8.09763 8.89178 7.70711 9.2823L3.70711 13.2823C3.31658 13.6728 2.68342 13.6728 2.29289 13.2823C1.90237 12.8918 1.90237 12.2586 2.29289 11.8681L5.58579 8.57519L2.29289 5.2823C1.90237 4.89178 1.90237 4.25861 2.29289 3.86809C2.68342 3.47756 3.31658 3.47756 3.70711 3.86809L7.70711 7.86809Z"
          />
          <path
            d="M13.7071 7.86809C14.0976 8.25861 14.0976 8.89178 13.7071 9.2823L9.70711 13.2823C9.31658 13.6728 8.68342 13.6728 8.29289 13.2823C7.90237 12.8918 7.90237 12.2586 8.29289 11.8681L11.5858 8.57519L8.29289 5.2823C7.90237 4.89178 7.90237 4.25861 8.29289 3.86809C8.68342 3.47756 9.31658 3.47756 9.70711 3.86809L13.7071 7.86809Z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly component with disabled 1`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-13xrz53-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.cache-13xrz53-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-1tpsxlm-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #464959;
  color: #b5b7bd;
  border: 1px solid #d9dadd;
}

.cache-1tpsxlm-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1cuf84p-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.cache-1cuf84p-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="cache-13xrz53-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M7.29289 9.2823C6.90237 8.89178 6.90237 8.25861 7.29289 7.86809L11.2929 3.86809C11.6834 3.47756 12.3166 3.47756 12.7071 3.86809C13.0976 4.25861 13.0976 4.89178 12.7071 5.2823L9.41421 8.5752L12.7071 11.8681C13.0976 12.2586 13.0976 12.8918 12.7071 13.2823C12.3166 13.6728 11.6834 13.6728 11.2929 13.2823L7.29289 9.2823Z"
          />
          <path
            d="M1.29289 9.2823C0.902369 8.89178 0.902369 8.25861 1.29289 7.86809L5.29289 3.86809C5.68342 3.47756 6.31658 3.47756 6.70711 3.86809C7.09763 4.25861 7.09763 4.89178 6.70711 5.2823L3.41421 8.5752L6.70711 11.8681C7.09763 12.2586 7.09763 12.8918 6.70711 13.2823C6.31658 13.6728 5.68342 13.6728 5.29289 13.2823L1.29289 9.2823Z"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="cache-13xrz53-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.3 8.7a1 1 0 0 1 0-1.4l4-4a1 1 0 1 1 1.4 1.4L7.42 8l3.3 3.3a1 1 0 0 1-1.42 1.4l-4-4Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="false"
        aria-label="Page 4"
        class="cache-1tpsxlm-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          4
        </div>
      </button>
      <button
        aria-current="true"
        aria-label="Page 5"
        class="cache-1cuf84p-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          5
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 6"
        class="cache-1tpsxlm-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          6
        </div>
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="cache-13xrz53-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M10.7071 7.29289C11.0976 7.68342 11.0976 8.31658 10.7071 8.70711L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L8.58579 8L5.29289 4.70711C4.90237 4.31658 4.90237 3.68342 5.29289 3.29289C5.68342 2.90237 6.31658 2.90237 6.70711 3.29289L10.7071 7.29289Z"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="cache-13xrz53-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M7.70711 7.86809C8.09763 8.25861 8.09763 8.89178 7.70711 9.2823L3.70711 13.2823C3.31658 13.6728 2.68342 13.6728 2.29289 13.2823C1.90237 12.8918 1.90237 12.2586 2.29289 11.8681L5.58579 8.57519L2.29289 5.2823C1.90237 4.89178 1.90237 4.25861 2.29289 3.86809C2.68342 3.47756 3.31658 3.47756 3.70711 3.86809L7.70711 7.86809Z"
          />
          <path
            d="M13.7071 7.86809C14.0976 8.25861 14.0976 8.89178 13.7071 9.2823L9.70711 13.2823C9.31658 13.6728 8.68342 13.6728 8.29289 13.2823C7.90237 12.8918 7.90237 12.2586 8.29289 11.8681L11.5858 8.57519L8.29289 5.2823C7.90237 4.89178 7.90237 4.25861 8.29289 3.86809C8.68342 3.47756 9.31658 3.47756 9.70711 3.86809L13.7071 7.86809Z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly component with disabled 2`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-13xrz53-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.cache-13xrz53-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-1tpsxlm-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #464959;
  color: #b5b7bd;
  border: 1px solid #d9dadd;
}

.cache-1tpsxlm-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1cuf84p-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.cache-1cuf84p-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="cache-13xrz53-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M7.29289 9.2823C6.90237 8.89178 6.90237 8.25861 7.29289 7.86809L11.2929 3.86809C11.6834 3.47756 12.3166 3.47756 12.7071 3.86809C13.0976 4.25861 13.0976 4.89178 12.7071 5.2823L9.41421 8.5752L12.7071 11.8681C13.0976 12.2586 13.0976 12.8918 12.7071 13.2823C12.3166 13.6728 11.6834 13.6728 11.2929 13.2823L7.29289 9.2823Z"
          />
          <path
            d="M1.29289 9.2823C0.902369 8.89178 0.902369 8.25861 1.29289 7.86809L5.29289 3.86809C5.68342 3.47756 6.31658 3.47756 6.70711 3.86809C7.09763 4.25861 7.09763 4.89178 6.70711 5.2823L3.41421 8.5752L6.70711 11.8681C7.09763 12.2586 7.09763 12.8918 6.70711 13.2823C6.31658 13.6728 5.68342 13.6728 5.29289 13.2823L1.29289 9.2823Z"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="cache-13xrz53-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.3 8.7a1 1 0 0 1 0-1.4l4-4a1 1 0 1 1 1.4 1.4L7.42 8l3.3 3.3a1 1 0 0 1-1.42 1.4l-4-4Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="false"
        aria-label="Page 4"
        class="cache-1tpsxlm-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          4
        </div>
      </button>
      <button
        aria-current="true"
        aria-label="Page 5"
        class="cache-1cuf84p-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          5
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 6"
        class="cache-1tpsxlm-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <div>
          6
        </div>
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="cache-13xrz53-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M10.7071 7.29289C11.0976 7.68342 11.0976 8.31658 10.7071 8.70711L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L8.58579 8L5.29289 4.70711C4.90237 4.31658 4.90237 3.68342 5.29289 3.29289C5.68342 2.90237 6.31658 2.90237 6.70711 3.29289L10.7071 7.29289Z"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="cache-13xrz53-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M7.70711 7.86809C8.09763 8.25861 8.09763 8.89178 7.70711 9.2823L3.70711 13.2823C3.31658 13.6728 2.68342 13.6728 2.29289 13.2823C1.90237 12.8918 1.90237 12.2586 2.29289 11.8681L5.58579 8.57519L2.29289 5.2823C1.90237 4.89178 1.90237 4.25861 2.29289 3.86809C2.68342 3.47756 3.31658 3.47756 3.70711 3.86809L7.70711 7.86809Z"
          />
          <path
            d="M13.7071 7.86809C14.0976 8.25861 14.0976 8.89178 13.7071 9.2823L9.70711 13.2823C9.31658 13.6728 8.68342 13.6728 8.29289 13.2823C7.90237 12.8918 7.90237 12.2586 8.29289 11.8681L11.5858 8.57519L8.29289 5.2823C7.90237 4.89178 7.90237 4.25861 8.29289 3.86809C8.68342 3.47756 9.31658 3.47756 9.70711 3.86809L13.7071 7.86809Z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly component with pageTabCount 1`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-1h6gv7y-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-1h6gv7y-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1h6gv7y-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1h6gv7y-StyledOutlinedButton:hover,
.cache-1h6gv7y-StyledOutlinedButton:active {
  background: #e6daff;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-1t06wjh-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #464959;
}

.cache-1t06wjh-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t06wjh-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1t06wjh-StyledOutlinedButton:hover,
.cache-1t06wjh-StyledOutlinedButton:active {
  background: #d9dadd;
  color: #222638;
  border: 1px solid #92959d;
}

.cache-xa4fns-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-xa4fns-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-xa4fns-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-xa4fns-StyledOutlinedButton:hover,
.cache-xa4fns-StyledOutlinedButton:active {
  background: #e6daff;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

<div
    class="cache-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="cache-1h6gv7y-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M7.29289 9.2823C6.90237 8.89178 6.90237 8.25861 7.29289 7.86809L11.2929 3.86809C11.6834 3.47756 12.3166 3.47756 12.7071 3.86809C13.0976 4.25861 13.0976 4.89178 12.7071 5.2823L9.41421 8.5752L12.7071 11.8681C13.0976 12.2586 13.0976 12.8918 12.7071 13.2823C12.3166 13.6728 11.6834 13.6728 11.2929 13.2823L7.29289 9.2823Z"
          />
          <path
            d="M1.29289 9.2823C0.902369 8.89178 0.902369 8.25861 1.29289 7.86809L5.29289 3.86809C5.68342 3.47756 6.31658 3.47756 6.70711 3.86809C7.09763 4.25861 7.09763 4.89178 6.70711 5.2823L3.41421 8.5752L6.70711 11.8681C7.09763 12.2586 7.09763 12.8918 6.70711 13.2823C6.31658 13.6728 5.68342 13.6728 5.29289 13.2823L1.29289 9.2823Z"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="cache-1h6gv7y-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.3 8.7a1 1 0 0 1 0-1.4l4-4a1 1 0 1 1 1.4 1.4L7.42 8l3.3 3.3a1 1 0 0 1-1.42 1.4l-4-4Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="false"
        aria-label="Page 4"
        class="cache-1t06wjh-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          4
        </div>
      </button>
      <button
        aria-current="true"
        aria-label="Page 5"
        class="cache-xa4fns-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          5
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 6"
        class="cache-1t06wjh-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          6
        </div>
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="cache-1h6gv7y-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M10.7071 7.29289C11.0976 7.68342 11.0976 8.31658 10.7071 8.70711L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L8.58579 8L5.29289 4.70711C4.90237 4.31658 4.90237 3.68342 5.29289 3.29289C5.68342 2.90237 6.31658 2.90237 6.70711 3.29289L10.7071 7.29289Z"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="cache-1h6gv7y-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M7.70711 7.86809C8.09763 8.25861 8.09763 8.89178 7.70711 9.2823L3.70711 13.2823C3.31658 13.6728 2.68342 13.6728 2.29289 13.2823C1.90237 12.8918 1.90237 12.2586 2.29289 11.8681L5.58579 8.57519L2.29289 5.2823C1.90237 4.89178 1.90237 4.25861 2.29289 3.86809C2.68342 3.47756 3.31658 3.47756 3.70711 3.86809L7.70711 7.86809Z"
          />
          <path
            d="M13.7071 7.86809C14.0976 8.25861 14.0976 8.89178 13.7071 9.2823L9.70711 13.2823C9.31658 13.6728 8.68342 13.6728 8.29289 13.2823C7.90237 12.8918 7.90237 12.2586 8.29289 11.8681L11.5858 8.57519L8.29289 5.2823C7.90237 4.89178 7.90237 4.25861 8.29289 3.86809C8.68342 3.47756 9.31658 3.47756 9.70711 3.86809L13.7071 7.86809Z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly with pageClick 1`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-1h6gv7y-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-1h6gv7y-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1h6gv7y-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1h6gv7y-StyledOutlinedButton:hover,
.cache-1h6gv7y-StyledOutlinedButton:active {
  background: #e6daff;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-1t06wjh-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #b5b7bd;
  color: #464959;
}

.cache-1t06wjh-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1t06wjh-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #151A2D5C;
}

.cache-1t06wjh-StyledOutlinedButton:hover,
.cache-1t06wjh-StyledOutlinedButton:active {
  background: #d9dadd;
  color: #222638;
  border: 1px solid #92959d;
}

.cache-xa4fns-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-xa4fns-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-xa4fns-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-xa4fns-StyledOutlinedButton:hover,
.cache-xa4fns-StyledOutlinedButton:active {
  background: #e6daff;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

<div
    class="cache-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="cache-1h6gv7y-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M7.29289 9.2823C6.90237 8.89178 6.90237 8.25861 7.29289 7.86809L11.2929 3.86809C11.6834 3.47756 12.3166 3.47756 12.7071 3.86809C13.0976 4.25861 13.0976 4.89178 12.7071 5.2823L9.41421 8.5752L12.7071 11.8681C13.0976 12.2586 13.0976 12.8918 12.7071 13.2823C12.3166 13.6728 11.6834 13.6728 11.2929 13.2823L7.29289 9.2823Z"
          />
          <path
            d="M1.29289 9.2823C0.902369 8.89178 0.902369 8.25861 1.29289 7.86809L5.29289 3.86809C5.68342 3.47756 6.31658 3.47756 6.70711 3.86809C7.09763 4.25861 7.09763 4.89178 6.70711 5.2823L3.41421 8.5752L6.70711 11.8681C7.09763 12.2586 7.09763 12.8918 6.70711 13.2823C6.31658 13.6728 5.68342 13.6728 5.29289 13.2823L1.29289 9.2823Z"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="cache-1h6gv7y-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.3 8.7a1 1 0 0 1 0-1.4l4-4a1 1 0 1 1 1.4 1.4L7.42 8l3.3 3.3a1 1 0 0 1-1.42 1.4l-4-4Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="false"
        aria-label="Page 1"
        class="cache-1t06wjh-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          1
        </div>
      </button>
      <button
        aria-current="true"
        aria-label="Page 2"
        class="cache-xa4fns-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          2
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 3"
        class="cache-1t06wjh-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          3
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 4"
        class="cache-1t06wjh-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          4
        </div>
      </button>
      <button
        aria-current="false"
        aria-label="Page 5"
        class="cache-1t06wjh-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          5
        </div>
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="cache-1h6gv7y-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M10.7071 7.29289C11.0976 7.68342 11.0976 8.31658 10.7071 8.70711L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L8.58579 8L5.29289 4.70711C4.90237 4.31658 4.90237 3.68342 5.29289 3.29289C5.68342 2.90237 6.31658 2.90237 6.70711 3.29289L10.7071 7.29289Z"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="cache-1h6gv7y-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M7.70711 7.86809C8.09763 8.25861 8.09763 8.89178 7.70711 9.2823L3.70711 13.2823C3.31658 13.6728 2.68342 13.6728 2.29289 13.2823C1.90237 12.8918 1.90237 12.2586 2.29289 11.8681L5.58579 8.57519L2.29289 5.2823C1.90237 4.89178 1.90237 4.25861 2.29289 3.86809C2.68342 3.47756 3.31658 3.47756 3.70711 3.86809L7.70711 7.86809Z"
          />
          <path
            d="M13.7071 7.86809C14.0976 8.25861 14.0976 8.89178 13.7071 9.2823L9.70711 13.2823C9.31658 13.6728 8.68342 13.6728 8.29289 13.2823C7.90237 12.8918 7.90237 12.2586 8.29289 11.8681L11.5858 8.57519L8.29289 5.2823C7.90237 4.89178 7.90237 4.25861 8.29289 3.86809C8.68342 3.47756 9.31658 3.47756 9.70711 3.86809L13.7071 7.86809Z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Pagination should render correctly with pageCount is 1 1`] = `
<DocumentFragment>
  .cache-a1981g-StyledContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-14uy6tf-PageSwitchContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
}

.cache-13xrz53-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: not-allowed;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
  color: #d8c5fc;
  border: 1px solid #d8c5fc;
}

.cache-13xrz53-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-kbjega-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-2sizh-PageNumbersContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  margin: 0 16px;
}

.cache-xa4fns-StyledOutlinedButton {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 48px;
  padding: 0 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  gap: 8px;
  border-radius: 4px;
  box-sizing: border-box;
  width: auto;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  outline-offset: 2px;
  white-space: nowrap;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  paragraph-spacing: 0;
  text-case: none;
  background: none;
  border: 1px solid #521094;
  color: #521094;
}

.cache-xa4fns-StyledOutlinedButton:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-xa4fns-StyledOutlinedButton:active {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-xa4fns-StyledOutlinedButton:hover,
.cache-xa4fns-StyledOutlinedButton:active {
  background: #e6daff;
  color: #3b1a61;
  border: 1px solid #3b1a61;
}

<div
    class="cache-a1981g-StyledContainer e5s692s0"
  >
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="First"
        class="cache-13xrz53-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M7.29289 9.2823C6.90237 8.89178 6.90237 8.25861 7.29289 7.86809L11.2929 3.86809C11.6834 3.47756 12.3166 3.47756 12.7071 3.86809C13.0976 4.25861 13.0976 4.89178 12.7071 5.2823L9.41421 8.5752L12.7071 11.8681C13.0976 12.2586 13.0976 12.8918 12.7071 13.2823C12.3166 13.6728 11.6834 13.6728 11.2929 13.2823L7.29289 9.2823Z"
          />
          <path
            d="M1.29289 9.2823C0.902369 8.89178 0.902369 8.25861 1.29289 7.86809L5.29289 3.86809C5.68342 3.47756 6.31658 3.47756 6.70711 3.86809C7.09763 4.25861 7.09763 4.89178 6.70711 5.2823L3.41421 8.5752L6.70711 11.8681C7.09763 12.2586 7.09763 12.8918 6.70711 13.2823C6.31658 13.6728 5.68342 13.6728 5.29289 13.2823L1.29289 9.2823Z"
          />
        </svg>
      </button>
      <button
        aria-label="Back"
        class="cache-13xrz53-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M5.3 8.7a1 1 0 0 1 0-1.4l4-4a1 1 0 1 1 1.4 1.4L7.42 8l3.3 3.3a1 1 0 0 1-1.42 1.4l-4-4Z"
          />
        </svg>
      </button>
    </div>
    <div
      class="cache-2sizh-PageNumbersContainer e5s692s2"
    >
      <button
        aria-current="true"
        aria-label="Page 1"
        class="cache-xa4fns-StyledOutlinedButton e112qvla1"
        type="button"
      >
        <div>
          1
        </div>
      </button>
    </div>
    <div
      class="cache-14uy6tf-PageSwitchContainer e5s692s1"
    >
      <button
        aria-label="Next"
        class="cache-13xrz53-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M10.7071 7.29289C11.0976 7.68342 11.0976 8.31658 10.7071 8.70711L6.70711 12.7071C6.31658 13.0976 5.68342 13.0976 5.29289 12.7071C4.90237 12.3166 4.90237 11.6834 5.29289 11.2929L8.58579 8L5.29289 4.70711C4.90237 4.31658 4.90237 3.68342 5.29289 3.29289C5.68342 2.90237 6.31658 2.90237 6.70711 3.29289L10.7071 7.29289Z"
          />
        </svg>
      </button>
      <button
        aria-label="Last"
        class="cache-13xrz53-StyledOutlinedButton e112qvla1"
        disabled=""
        type="button"
      >
        <svg
          class="cache-kbjega-StyledIcon-sizeStyles e5nqbfp0"
          viewBox="0 0 16 16"
        >
          <path
            d="M7.70711 7.86809C8.09763 8.25861 8.09763 8.89178 7.70711 9.2823L3.70711 13.2823C3.31658 13.6728 2.68342 13.6728 2.29289 13.2823C1.90237 12.8918 1.90237 12.2586 2.29289 11.8681L5.58579 8.57519L2.29289 5.2823C1.90237 4.89178 1.90237 4.25861 2.29289 3.86809C2.68342 3.47756 3.31658 3.47756 3.70711 3.86809L7.70711 7.86809Z"
          />
          <path
            d="M13.7071 7.86809C14.0976 8.25861 14.0976 8.89178 13.7071 9.2823L9.70711 13.2823C9.31658 13.6728 8.68342 13.6728 8.29289 13.2823C7.90237 12.8918 7.90237 12.2586 8.29289 11.8681L11.5858 8.57519L8.29289 5.2823C7.90237 4.89178 7.90237 4.25861 8.29289 3.86809C8.68342 3.47756 9.31658 3.47756 9.70711 3.86809L13.7071 7.86809Z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
